Adjust run script for Java 17.